--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+.idea
 
 npm-debug.log*
 yarn-debug.log*
